k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  k8s-jenkins-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-jenkins
  template:
    metadata:
      labels:
        app: k8s-jenkins
    spec:
      containers:
      - name: k8s-jenkins
        image: khadydiagne/k8s_jenkins:latest
        ports:
        - containerPort: 8086
