k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-jenkins-service
spec:
  selector:
    app: k8s-jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8087
  type: LoadBalancer
