k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-jenkins-ingress
spec:
  rules:
  - host: k8s-jenkins.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-jenkins-service
            port:
              number: 8086
